--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Fantasm4z/youtubemachined/issues"
   },
-  "homepage": "https://github.com/Fantasm4z/youtubemachined#readme"
+  "homepage": "https://github.com/Fantasm4z/youtubemachined#readme",
+  "dependencies": {
+    "youtube-mp3-downloader": "^0.7.3"
+  }
 }
